test/test-files/analyzer/procedures/error-mandatory-after-optional-arg/exception.out
Semantic error in : ./test-files/analyzer/procedures/error-mandatory-after-optional-arg/source.spice:1:44:
Invalid argument order: Mandatory parameters must go before any optional parameters

bool arg1 = false, int arg2) {
                   ^^^^^^^^